// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ScheduleDialog Sets correct schedule settings Sets to "1 Day 22:15" Sets to correct interval 1`] = `
<div
  data-testid="interval"
>
  <div
    class="ant-select ant-select-outlined input css-var-root ant-select-css-var css-dev-only-do-not-override-1pi45l5 ant-select-single ant-select-show-arrow"
  >
    <div
      class="ant-select-content ant-select-content-has-value"
      title="1 day"
    >
      1 day
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="new-password"
        class="ant-select-input"
        id="test-id"
        readonly=""
        role="combobox"
        type="text"
        value=""
      />
    </div>
    <div
      class="ant-select-suffix"
    >
      <span
        aria-label="down"
        class="anticon anticon-down"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`ScheduleDialog Sets correct schedule settings Sets to "1 Day 22:15" Sets to correct time 1`] = `
<div
  data-testid="time"
>
  <div
    class="ant-picker ant-picker-outlined css-dev-only-do-not-override-1pi45l5 css-var-root ant-picker-css-var"
  >
    <div
      class="ant-picker-input"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        placeholder="Select time"
        size="10"
        value="00:15"
      />
      <span
        class="ant-picker-suffix"
      >
        <span
          aria-hidden="true"
          aria-label="clock-circle"
          class="anticon anticon-clock-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="clock-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
            <path
              d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>
  <span
    class="utc"
    data-testid="utc"
  >
    (
    22:15
     UTC)
  </span>
</div>
`;

exports[`ScheduleDialog Sets correct schedule settings Sets to "2 Hours" 1`] = `
<div
  data-testid="interval"
>
  <div
    class="ant-select ant-select-outlined input css-var-root ant-select-css-var css-dev-only-do-not-override-1pi45l5 ant-select-single ant-select-show-arrow"
  >
    <div
      class="ant-select-content ant-select-content-has-value"
      title="7200"
    >
      7200
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="new-password"
        class="ant-select-input"
        id="test-id"
        readonly=""
        role="combobox"
        type="text"
        value=""
      />
    </div>
    <div
      class="ant-select-suffix"
    >
      <span
        aria-label="down"
        class="anticon anticon-down"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`ScheduleDialog Sets correct schedule settings Sets to "2 Weeks 22:15 Tuesday" Sets to correct interval 1`] = `
<div
  data-testid="interval"
>
  <div
    class="ant-select ant-select-outlined input css-var-root ant-select-css-var css-dev-only-do-not-override-1pi45l5 ant-select-single ant-select-show-arrow"
  >
    <div
      class="ant-select-content ant-select-content-has-value"
      title="2 weeks"
    >
      2 weeks
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="new-password"
        class="ant-select-input"
        id="test-id"
        readonly=""
        role="combobox"
        type="text"
        value=""
      />
    </div>
    <div
      class="ant-select-suffix"
    >
      <span
        aria-label="down"
        class="anticon anticon-down"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`ScheduleDialog Sets correct schedule settings Sets to "2 Weeks 22:15 Tuesday" Sets to correct time 1`] = `
<div
  data-testid="time"
>
  <div
    class="ant-picker ant-picker-outlined css-dev-only-do-not-override-1pi45l5 css-var-root ant-picker-css-var"
  >
    <div
      class="ant-picker-input"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        placeholder="Select time"
        size="10"
        value="00:15"
      />
      <span
        class="ant-picker-suffix"
      >
        <span
          aria-hidden="true"
          aria-label="clock-circle"
          class="anticon anticon-clock-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="clock-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
            <path
              d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>
  <span
    class="utc"
    data-testid="utc"
  >
    (
    22:15
     UTC)
  </span>
</div>
`;

exports[`ScheduleDialog Sets correct schedule settings Sets to "2 Weeks 22:15 Tuesday" Sets to correct weekday 1`] = `
<div
  data-testid="weekday"
>
  <div
    class="ant-radio-group ant-radio-group-outline css-dev-only-do-not-override-1pi45l5 css-var-root ant-radio-css-var"
    role="radiogroup"
  >
    <label
      class="ant-radio-button-wrapper input css-dev-only-do-not-override-1pi45l5 css-var-root ant-radio-css-var"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          name="test-id"
          type="radio"
          value="Sun"
        />
      </span>
      <span
        class="ant-radio-button-label"
      >
        S
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked input css-dev-only-do-not-override-1pi45l5 css-var-root ant-radio-css-var"
    >
      <span
        class="ant-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ant-radio-button-input"
          name="test-id"
          type="radio"
          value="Mon"
        />
      </span>
      <span
        class="ant-radio-button-label"
      >
        M
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper input css-dev-only-do-not-override-1pi45l5 css-var-root ant-radio-css-var"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          name="test-id"
          type="radio"
          value="Tue"
        />
      </span>
      <span
        class="ant-radio-button-label"
      >
        T
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper input css-dev-only-do-not-override-1pi45l5 css-var-root ant-radio-css-var"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          name="test-id"
          type="radio"
          value="Wed"
        />
      </span>
      <span
        class="ant-radio-button-label"
      >
        W
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper input css-dev-only-do-not-override-1pi45l5 css-var-root ant-radio-css-var"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          name="test-id"
          type="radio"
          value="Thu"
        />
      </span>
      <span
        class="ant-radio-button-label"
      >
        T
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper input css-dev-only-do-not-override-1pi45l5 css-var-root ant-radio-css-var"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          name="test-id"
          type="radio"
          value="Fri"
        />
      </span>
      <span
        class="ant-radio-button-label"
      >
        F
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper input css-dev-only-do-not-override-1pi45l5 css-var-root ant-radio-css-var"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          name="test-id"
          type="radio"
          value="Sat"
        />
      </span>
      <span
        class="ant-radio-button-label"
      >
        S
      </span>
    </label>
  </div>
</div>
`;

exports[`ScheduleDialog Sets correct schedule settings Sets to "5 Minutes" 1`] = `
<div
  data-testid="interval"
>
  <div
    class="ant-select ant-select-outlined input css-var-root ant-select-css-var css-dev-only-do-not-override-1pi45l5 ant-select-single ant-select-show-arrow"
  >
    <div
      class="ant-select-content ant-select-content-has-value"
      title="5 minutes"
    >
      5 minutes
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="new-password"
        class="ant-select-input"
        id="test-id"
        readonly=""
        role="combobox"
        type="text"
        value=""
      />
    </div>
    <div
      class="ant-select-suffix"
    >
      <span
        aria-label="down"
        class="anticon anticon-down"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`ScheduleDialog Sets correct schedule settings Sets to "Never" 1`] = `
<div
  data-testid="interval"
>
  <div
    class="ant-select ant-select-outlined input css-var-root ant-select-css-var css-dev-only-do-not-override-1pi45l5 ant-select-single ant-select-show-arrow"
  >
    <div
      class="ant-select-content"
    >
      <div
        class="ant-select-placeholder"
        style="visibility: visible;"
      />
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="new-password"
        class="ant-select-input"
        id="test-id"
        readonly=""
        role="combobox"
        type="text"
        value=""
      />
    </div>
    <div
      class="ant-select-suffix"
    >
      <span
        aria-label="down"
        class="anticon anticon-down"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`ScheduleDialog Sets correct schedule settings Supports 30 days interval with no time value Time is none 1`] = `
<div
  data-testid="time"
>
  <div
    class="ant-picker ant-picker-outlined css-dev-only-do-not-override-1pi45l5 css-var-root ant-picker-css-var"
  >
    <div
      class="ant-picker-input"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        placeholder="Select time"
        size="10"
        value=""
      />
      <span
        class="ant-picker-suffix"
      >
        <span
          aria-hidden="true"
          aria-label="clock-circle"
          class="anticon anticon-clock-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="clock-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
            <path
              d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`ScheduleDialog Sets correct schedule settings Until feature Until is set 1`] = `
<div
  class="ends"
  data-testid="ends"
>
  <div
    class="ant-radio-group ant-radio-group-outline css-dev-only-do-not-override-1pi45l5 css-var-root ant-radio-css-var"
    role="radiogroup"
  >
    <label
      class="ant-radio-wrapper css-dev-only-do-not-override-1pi45l5 css-var-root ant-radio-css-var"
    >
      <span
        class="ant-radio ant-wave-target"
      >
        <input
          class="ant-radio-input"
          name="test-id"
          type="radio"
          value="false"
        />
      </span>
      <span
        class="ant-radio-label"
      >
        Never
      </span>
    </label>
    <label
      class="ant-radio-wrapper ant-radio-wrapper-checked css-dev-only-do-not-override-1pi45l5 css-var-root ant-radio-css-var"
    >
      <span
        class="ant-radio ant-wave-target ant-radio-checked"
      >
        <input
          checked=""
          class="ant-radio-input"
          name="test-id"
          type="radio"
          value="true"
        />
      </span>
      <span
        class="ant-radio-label"
      >
        On
      </span>
    </label>
  </div>
  <div
    class="ant-picker ant-picker-small ant-picker-outlined datepicker css-dev-only-do-not-override-1pi45l5 css-var-root ant-picker-css-var"
  >
    <div
      class="ant-picker-input"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        placeholder="Select date"
        size="12"
        value="2030-01-01"
      />
      <span
        class="ant-picker-suffix"
      >
        <span
          aria-hidden="true"
          aria-label="calendar"
          class="anticon anticon-calendar"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="calendar"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`ScheduleDialog Sets correct schedule settings Until feature Until not set 1`] = `
<div
  class="ends"
  data-testid="ends"
>
  <div
    class="ant-radio-group ant-radio-group-outline css-dev-only-do-not-override-1pi45l5 css-var-root ant-radio-css-var"
    role="radiogroup"
  >
    <label
      class="ant-radio-wrapper ant-radio-wrapper-checked css-dev-only-do-not-override-1pi45l5 css-var-root ant-radio-css-var"
    >
      <span
        class="ant-radio ant-wave-target ant-radio-checked"
      >
        <input
          checked=""
          class="ant-radio-input"
          name="test-id"
          type="radio"
          value="false"
        />
      </span>
      <span
        class="ant-radio-label"
      >
        Never
      </span>
    </label>
    <label
      class="ant-radio-wrapper css-dev-only-do-not-override-1pi45l5 css-var-root ant-radio-css-var"
    >
      <span
        class="ant-radio ant-wave-target"
      >
        <input
          class="ant-radio-input"
          name="test-id"
          type="radio"
          value="true"
        />
      </span>
      <span
        class="ant-radio-label"
      >
        On
      </span>
    </label>
  </div>
</div>
`;
